# terminal-watching

./: .gitignore  LICENSE  README.md  pyproject.toml
src/terminal_watching/: __init__.py  main.py
src/terminal_watching/application/: dashboard.py
src/terminal_watching/domain/: models.py  ports.py
src/terminal_watching/infrastructure/: config_loader.py  detector.py  file_watcher.py  log_monitor.py  process_manager.py  wizard.py
src/terminal_watching/ui/: terminal.py
tests/: test_config_loader.py  test_dashboard.py  test_detector.py  test_file_watcher.py  test_log_monitor.py  test_main.py  test_models.py  test_process_manager.py  test_wizard.py
