[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-watching"
version = "0.1.0"
description = "Dev dashboard CLI — auto-restart, log streaming, and monitoring for any project"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "UTC1992"}
]
keywords = ["developer-tools", "dashboard", "hot-reload", "auto-restart", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]

[project.scripts]
tw = "terminal_watching.main:main"

[project.urls]
Homepage = "https://github.com/UTC1992/terminal-watching"
Repository = "https://github.com/UTC1992/terminal-watching"
Issues = "https://github.com/UTC1992/terminal-watching/issues"

[tool.setuptools.packages.find]
where = ["src"]
